--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -305,6 +305,8 @@ table.inputFormTable
   label
     :display block
     :padding 4px 0 0 0
+  label.optional
+    :color #444
 
 table.openingsForm
   :border-collapse collapse
