--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,10 +7,7 @@
     - if @page_desc
       = tag(:meta, { :name=>'description', :content => @page_desc })
     = stylesheet_link_tag :all, :cache => true, :media => 'all'
-    = javascript_include_tag :defaults if @javascript
-    - if @calendarDateSelect
-      = calendar_date_select_includes :format=>'hyphen_ampm'
-      = javascript_include_tag "hyphen_storage"
+    = javascript_include_tag :defaults
     = yield :head
     - if RAILS_ENV == 'development'
       %style{ :type=>'text/css' }
@@ -32,5 +29,5 @@
         %a{:name=>'content'}
         = yield
 
-      =# render :partial => 'partials/footer'
+      = render :partial => 'partials/footer'
     =# render :partial => 'partials/analytics' if RAILS_ENV == 'production'
