--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -1,16 +1,15 @@
 #footer
   %ul
-    %li= link_to "&copy; Copyright #{Time.now.year}", :controller => 'extras', :action => 'copyright'
-    %li= link_to 'Groups', { :controller => 'groups' }
-    %li= link_to 'About', { :controller => 'extras', :action => 'about' }
-    %li= link_to(content_tag(:abbr,'FAQ',:title=>'Frequently Asked Questions'), { :controller => 'extras', :action => 'faq' })
+    %li= link_to "&copy; Copyright #{Time.now.year}", copyright_path
+    %li= link_to 'About', about_path
+    %li= link_to(content_tag(:abbr,'FAQ',:title=>'Frequently Asked Questions'), faq_path)
     %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
-    %li= link_to 'Accessiblity', { :controller => 'extras', :action => 'accessibility' }, :accesskey => '9'
-    %li= link_to 'Feedback', :controller => 'extras', :action => 'feedback'
+    %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
+    %li= link_to 'Feedback', feedback_path
 
-  %p.bookmark= render :partial => 'partials/add_this'
+  %p.bookmark= render :partial => 'partials/add_this' if RAILS_ENV == 'production'
 
-  - if current_page?(:controller=>:services, :action=>:show) || current_page?(:controller=>:search, :action=>:index)
+  - if current_page?(facilities_path) #TODO || current_page?(:controller=>:search, :action=>:index)
     %p
       Opening Times server clock
       = Time.current.strftime("%I:%M%p - %a %d %b %Y")
