--- a/app/views/partials/_footer.html.haml
+++ b/app/views/partials/_footer.html.haml
@@ -2,10 +2,13 @@
   %ul
     %li= link_to "&copy; Copyright #{Time.now.year}", copyright_path
     %li= link_to 'About', about_path
-    %li= link_to(content_tag(:abbr,'FAQ',:title=>'Frequently Asked Questions'), faq_path)
+    %li= link_to 'FAQ', faq_path, :title=>'Frequently Asked Questions'
     %li= link_to 'Blog', 'http://blog.opening-times.co.uk'
     %li= link_to 'Accessibility', accessibility_path, :accesskey => '9'
     %li= link_to 'Feedback', feedback_path
+    %li
+      %strong
+        = link_to 'Add a facility', new_facility_path
 
   %p.bookmark= render :partial => 'partials/add_this' if RAILS_ENV == 'production'
 
