--- a/app/views/partials/_map_edit.html.erb
+++ b/app/views/partials/_map_edit.html.erb
@@ -1,10 +1,18 @@
 <% content_for :head do -%>
 <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key=<%= GOOGLE_MAPS_API_KEY %>" type="text/javascript"></script>
 <script type="text/javascript">
+
+var map = null;
+var geocoder = null;
+
+var center = new GLatLng(54.749991,-3.55957);
+var marker = new GMarker(center, {draggable: true});
+
 function initialize() {
   if (GBrowserIsCompatible()) {
-    var map = new GMap2(document.getElementById("map_canvas"));
-    var center = new GLatLng(54.749991,-3.55957);
+    map = new GMap2(document.getElementById("map_canvas"));
+    geocoder = new GClientGeocoder();
+
 
     map.addControl(new GSmallZoomControl());
     map.addControl(new GMenuMapTypeControl());
@@ -13,20 +21,45 @@ function initialize() {
     <% unless @facility.new_record? -%>
     var center = new GLatLng(<%= @facility.lat %>, <%= @facility.lng %>);
   	map.setCenter(center, 18, G_HYBRID_MAP);
-    var marker = new GMarker(center, {draggable: true});
+    marker.setLatLng(center)
+    map.addOverlay(marker);
+    <% end -%>
 
     GEvent.addListener(marker, "dragstart", function() {
       map.closeInfoWindow();
     });
 
     GEvent.addListener(marker, "dragend", function() {
-  		document.getElementById('facility_lat').value = marker.getPoint().lat();
-  		document.getElementById('facility_lng').value = marker.getPoint().lng();
+  		document.getElementById('facility_lat').value = marker.getPoint().lat().toFixed(7);
+  		document.getElementById('facility_lng').value = marker.getPoint().lng().toFixed(7);
     });
 
-    map.addOverlay(marker);
-    <% end -%>
   }
 }
+
+function showAddress(address) {
+  if (geocoder) {
+    if (address.strip() == ',') {
+      return false;
+    }
+    geocoder.getLatLng(
+      address + ", UK",
+      function(point) {
+        if (!point) {
+          alert(address + " not found");
+        } else {
+          map.setCenter(point, 18);
+          //var marker = new GMarker(point);
+          marker.setLatLng(point)
+          map.addOverlay(marker);
+      		document.getElementById('facility_lat').value = marker.getPoint().lat().toFixed(7);
+      		document.getElementById('facility_lng').value = marker.getPoint().lng().toFixed(7);
+        }
+      }
+    );
+  }
+}
+
+
 </script>
 <% end -%>
