--- a/app/views/partials/_banner.html.haml
+++ b/app/views/partials/_banner.html.haml
@@ -1,7 +1,5 @@
 #banner
   %h2#siteTitle
     %a{ :href=>"/", :accesskey => '1' }
-      :plain
-        <!--[if IE]> <img src="/images/logo-small.png" alt="Opening Times logo" width="96" height="96" /> <![endif]-->
-        <!--[if !IE]>--> <object data="/images/clock_anim.svg" type="image/svg+xml" width="96" height="96"></object> <!--<![endif]-->
+      <img src="/images/logo-small.png" alt="Opening Times logo" width="96" height="96" />
       Opening-Times.co.uk
