--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -164,6 +164,20 @@ address
   :margin-top 0
   :background #fff
 
+#userBar
+  :background #ccc
+  :padding 2px 8px
+  :text-align right
+  :font-size 12px
+
+#userBar a
+  :color #444
+  :text-decoration none
+  :padding 2px
+  &:hover
+    :color #000
+    :background #bbb
+
 #flash
   :margin auto
   :margin-top .5em
