--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -33,7 +33,7 @@
 
 
       = render :partial => 'partials/banner' unless @no_banner
-      =# render :partial => 'partials/search_bar' unless @no_search_bar
+      = render :partial => 'partials/search_bar' unless @no_search_bar
 
       = yield :top_content
 
