--- a/public/stylesheets/sass/stylesheet.sass
+++ b/public/stylesheets/sass/stylesheet.sass
@@ -106,8 +106,9 @@ ul.paddedList
   li
     :padding-bottom 6px
 
-li
-  :list-style-image url(/images/bullet.png)
+ul
+  li
+    :list-style-image url(/images/bullet.png)
 
 ins
   :background #9f9
