--- a/app/views/partials/_search_bar.html.haml
+++ b/app/views/partials/_search_bar.html.haml
@@ -1,11 +1,10 @@
 #searchBar
-  %form{ :action=>"/search", :method=>"get" }  
+  %form{ :action=>"/search", :method=>"get" }
     = label_tag 'location', 'Where', :accesskey=>'4'
     = text_field_tag 'location', params[:location], :size => 14
-    = label_tag 'group', 'What'
-    = render :partial=>'partials/groups_select'
+    = #label_tag 'group', 'What'
+    = #render :partial=>'partials/groups_select'
     = submit_tag 'Search', :name => nil, :class=>'button'
     %small
-      /%span.rightBorder= link_to 'Advanced search', :controller => :search, :action => :advanced      
+      /%span.rightBorder= link_to 'Advanced search', :controller => :search, :action => :advanced
       = link_to 'Locate me with Fire Eagle', { :controller => :search, :action => :fireeagle }, :title=>"Use Yahoo! Fire Eagle"
-
