--- a/app/views/about/recentchanges.xml.haml
+++ b/app/views/about/recentchanges.xml.haml
@@ -1,11 +1,11 @@
 !!! xml
 %facilitys
-  - for v in @versions
+  - for v in @revisions
     %facility
       %version_id= v.id
       %facility_id= v.facility_id
       %name= h(v.facility.full_name)
       %url= facility_url(v.facility)
-      %data_url= facility_version_url(v.facility, v)
+      %data_url= facility_revisions_url(v.facility, v)
       %created_by= v.created_by
       %created_at= v.created_at
