--- a/app/views/partials/_user_links.html.haml
+++ b/app/views/partials/_user_links.html.haml
@@ -1,7 +1,7 @@
 #userLinks
   - if current_user
     Logged in as
-    = link_to current_user.login, account_path
+    = link_to current_user.email, account_path
     |
     = link_to "logout", logout_path
   - else
