--- a/app/views/facilities/show.html.haml
+++ b/app/views/facilities/show.html.haml
@@ -58,21 +58,23 @@
         - @nearby[0...5].each_with_index do |nearby,index|
           %li= link_to h(nearby.full_name), facility_slug_path(nearby.slug)
 
-      %h2 Groups
-      %ul
-        %li Woo
-
-      #infoBox
+      .infoBox
         %ul
           %li
-            ID
+            ID:
             = @facility.id
           %li
-            Updated at
-            %span{ :facility=> @facility.updated_at }= @facility.updated_at.strftime("%a %d %b %Y")
+            Last updated:
+            = @facility.updated_at
           %li
-            Updated by
+            Updated by:
             = link_to @facility.updated_by, user_path(@facility.updated_by)
+          %li
+            .geo
+              Geo:
+              %span.latitude= @facility.lat
+              %span.longitude= @facility.lng
+
           %li
             = link_to 'Edit', edit_facility_path(@facility.id)
           %li
